create content files

--- a/content/Makefile
+++ b/content/Makefile
@@ -5,8 +5,8 @@ DST_RMD = $(patsubst %.Rmd,%.md,$(SRC_RMD))
 
 # All Markdown files (hand-written and generated).
 ALL_MD = $(wildcard *.md) $(DST_RMD)
-EXCLUDE_MD = README.md LAYOUT.md FAQ.md DESIGN.md CONTRIBUTING.md CONDUCT.md
-SRC_MD = $(filter-out $(EXCLUDE_MD),$(ALL_MD))
+EXCLUDE_MD = README.md LAYOUT.md FAQ.md DESIGN.md CONTRIBUTING.md CONDUCT.md SUMMARY.md
+SRC_MD = $(ALL_MD)
 
 # All outputs.
 DST_ALL = $(SRC_MD)
@@ -35,4 +35,3 @@ preview : $(DST_ALL)
 ## commands : Display available commands.
 commands : Makefile
 	@sed -n 's/^##//p' $<
-
